--- a/templates/index.html
+++ b/templates/index.html
@@ -301,164 +301,19 @@
 									<h4 class="widget-title">Friends</h4>
 									<div id="searchDir"></div>
 									<ul id="people-list" class="friendz-list">
+										{% for i in all_user %}
 										<li>
 											<figure>
 												<img src="images/resources/friend-avatar.jpg" alt="">
 												<span class="status f-online"></span>
 											</figure>
 											<div class="friendz-meta">
-												<a href="time-line.html">bucky barnes</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a0d7c9ced4c5d2d3cfccc4c5d2e0c7cdc1c9cc8ec3cfcd">[email&#160;protected]</a></i>
+												<a href="/user/{{i.id}}/">{{i.first_name}} {{i.last_name}}</a>
+												<i><a class="__cf_email__" data-cfemail="a0d7c9ced4c5d2d3cfccc4c5d2e0c7cdc1c9cc8ec3cfcd">{{i.email}}</a></i>
 											</div>
 										</li>
-										<li>
-											<figure>
-												<img src="images/resources/friend-avatar2.jpg" alt="">
-												<span class="status f-away"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">Sarah Loren</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b4d6d5c6dad1c7f4d3d9d5ddd89ad7dbd9">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-											<figure>
-												<img src="images/resources/friend-avatar3.jpg" alt="">
-												<span class="status f-off"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">jason borne</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1d777c6e72737f5d7a707c7471337e7270">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-											<figure>
-												<img src="images/resources/friend-avatar4.jpg" alt="">
-												<span class="status f-off"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">Cameron diaz</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bed4dfcdd1d0dcfed9d3dfd7d290ddd1d3">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-
-											<figure>
-												<img src="images/resources/friend-avatar5.jpg" alt="">
-												<span class="status f-online"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">daniel warber</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="553f34263a3b37153238343c397b363a38">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-
-											<figure>
-												<img src="images/resources/friend-avatar6.jpg" alt="">
-												<span class="status f-away"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">andrew</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5933382a36373b193e34383035773a3634">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-
-											<figure>
-												<img src="images/resources/friend-avatar7.jpg" alt="">
-												<span class="status f-off"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">amy watson</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5933382a36373b193e34383035773a3634">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-
-											<figure>
-												<img src="images/resources/friend-avatar5.jpg" alt="">
-												<span class="status f-online"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">daniel warber</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="dbb1baa8b4b5b99bbcb6bab2b7f5b8b4b6">[email&#160;protected]</a></i>
-											</div>
-										</li>
-										<li>
-
-											<figure>
-												<img src="images/resources/friend-avatar2.jpg" alt="">
-												<span class="status f-away"></span>
-											</figure>
-											<div class="friendz-meta">
-												<a href="time-line.html">Sarah Loren</a>
-												<i><a href="https://wpkixx.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2644475448435566414b474f4a0845494b">[email&#160;protected]</a></i>
-											</div>
-										</li>
+										{% endfor %}
 									</ul>
-									<div class="chat-box">
-										<div class="chat-head">
-											<span class="status f-online"></span>
-											<h6>Bucky Barnes</h6>
-											<div class="more">
-												<span><i class="ti-more-alt"></i></span>
-												<span class="close-mesage"><i class="ti-close"></i></span>
-											</div>
-										</div>
-										<div class="chat-list">
-											<ul>
-												<li class="me">
-													<div class="chat-thumb"><img src="images/resources/chatlist1.jpg" alt=""></div>
-													<div class="notification-event">
-														<span class="chat-message-item">
-															Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
-														</span>
-														<span class="notification-date"><time datetime="2004-07-24T18:18" class="entry-date updated">Yesterday at 8:10pm</time></span>
-													</div>
-												</li>
-												<li class="you">
-													<div class="chat-thumb"><img src="images/resources/chatlist2.jpg" alt=""></div>
-													<div class="notification-event">
-														<span class="chat-message-item">
-															Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
-														</span>
-														<span class="notification-date"><time datetime="2004-07-24T18:18" class="entry-date updated">Yesterday at 8:10pm</time></span>
-													</div>
-												</li>
-												<li class="me">
-													<div class="chat-thumb"><img src="images/resources/chatlist1.jpg" alt=""></div>
-													<div class="notification-event">
-														<span class="chat-message-item">
-															Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
-														</span>
-														<span class="notification-date"><time datetime="2004-07-24T18:18" class="entry-date updated">Yesterday at 8:10pm</time></span>
-													</div>
-												</li>
-											</ul>
-											<form class="text-box">
-												<textarea placeholder="Post enter to post..."></textarea>
-												<div class="add-smiles">
-													<span title="add icon" class="em em-expressionless"></span>
-												</div>
-												<div class="smiles-bunch">
-													<i class="em em---1"></i>
-													<i class="em em-smiley"></i>
-													<i class="em em-anguished"></i>
-													<i class="em em-laughing"></i>
-													<i class="em em-angry"></i>
-													<i class="em em-astonished"></i>
-													<i class="em em-blush"></i>
-													<i class="em em-disappointed"></i>
-													<i class="em em-worried"></i>
-													<i class="em em-kissing_heart"></i>
-													<i class="em em-rage"></i>
-													<i class="em em-stuck_out_tongue"></i>
-												</div>
-												<button type="submit"></button>
-											</form>
-										</div>
-									</div>
 								</div><!-- friends list sidebar -->
 							</aside>
 						</div><!-- sidebar -->
