--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 							<div class="loadMore">
 								{% for a in post %}
 
-								<div class="central-meta item">
+								<div class="central-meta item" style="border-radius: 10px;">
 									<div class="user-post">
 										<div class="friend-info">
 											<figure>
